<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@mipmap/home"
        android:title="@string/home" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/news_feed"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/feed" />

    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notifications" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/profile" />

</menu>
