<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".ui.activities.LoginActivity">

   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <LinearLayout
           android:padding="20dp"
           android:background="#f8f8f8"
           android:layout_weight="1.25"
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="0dp">

           <ImageView
               android:src="@mipmap/ic_launcher"
               android:layout_width="70dp"
               android:layout_height="70dp"
               android:contentDescription="@string/logo" />

           <TextView
               android:textSize="25sp"
               android:textColor="#313131"
               android:layout_marginTop="10dp"
               android:text="@string/welcome_string"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />

           <TextView
               android:textSize="18sp"
               android:layout_marginTop="5dp"
               android:text="@string/login_desc"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />

       </LinearLayout>

       <LinearLayout
           android:orientation="vertical"
           android:padding="15dp"
           android:background="@color/white"
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/email_layout"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_email">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/emailEditText"
                   android:inputType="textEmailAddress"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" />

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/password_layout"
               android:layout_marginTop="10dp"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_password">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/passwordEditText"
                   android:inputType="textPassword"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" />

           </com.google.android.material.textfield.TextInputLayout>

           <LinearLayout
               android:layout_marginTop="10dp"
               android:gravity="end"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <com.google.android.material.button.MaterialButton
                   style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                   android:id="@+id/forgot_password"
                   android:text="@string/forgot_password"
                   android:layout_marginEnd="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginRight="10dp" />

               <com.google.android.material.button.MaterialButton
                   android:onClick="onLoginClick"
                   android:id="@+id/login"
                   android:text="@string/login"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

           </LinearLayout>

           <LinearLayout
               android:layout_marginTop="10dp"
               android:gravity="center"
               android:orientation="horizontal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <View
                   android:layout_weight="2"
                   android:background="#818181"
                   android:layout_width="0dp"
                   android:layout_height="1dp"/>

               <TextView
                   android:text="@string/or"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <View
                   android:layout_weight="2"
                   android:background="#818181"
                   android:layout_width="0dp"
                   android:layout_height="1dp"/>

           </LinearLayout>

           <com.google.android.material.button.MaterialButton
               android:layout_marginTop="10dp"
               android:onClick="onCreateAccountButtonCLick"
               android:id="@+id/register"
               android:text="@string/create_account"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

       </LinearLayout>

   </LinearLayout>

</ScrollView>