<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <!--Top bar-->
           <RelativeLayout
               android:padding="6dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <ImageView
                   android:id="@+id/logo"
                   android:src="@mipmap/ic_launcher"
                   android:padding="7dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />

               <TextView
                   android:id="@+id/title"
                   android:layout_marginEnd="10dp"
                   android:layout_toRightOf="@+id/logo"
                   android:layout_centerVertical="true"
                   fontPath="fonts/GoogleSans_Bold.ttf"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/app_name"
                   android:textColor="#313131"
                   android:textSize="22sp"
                   tools:ignore="MissingPrefix"
                   android:layout_toEndOf="@+id/logo"
                   android:layout_marginRight="10dp"
                   />

           </RelativeLayout>

           <LinearLayout
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <!--Genre-->
               <HorizontalScrollView
                   android:scrollbars="none"
                   android:overScrollMode="never"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <LinearLayout
                       android:orientation="horizontal"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content">

                       <TextView
                           android:layout_marginLeft="15dp"
                           android:layout_gravity="center"
                           fontPath="fonts/GoogleSans_Bold.ttf"
                           android:text="Genre"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_marginStart="15dp"
                           tools:ignore="MissingPrefix" />

                       <com.google.android.material.chip.ChipGroup
                           android:layout_gravity="center"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content">

                           <com.google.android.material.chip.Chip
                               android:id="@+id/c1"
                               android:layout_marginStart="10dp"
                               style="@style/Widget.MaterialComponents.Chip.Action"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/genre_rnb"
                               app:chipIconTint="@color/purple_dark"
                               app:chipIcon="@mipmap/music_cd"
                               android:layout_marginLeft="10dp" />

                           <com.google.android.material.chip.Chip
                               android:id="@+id/c2"
                               style="@style/Widget.MaterialComponents.Chip.Action"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginStart="4dp"
                               android:text="@string/genre_electro_pop"
                               app:chipIconTint="@color/purple_dark"
                               app:chipIcon="@mipmap/music_cd"
                               android:layout_marginLeft="4dp" />

                           <com.google.android.material.chip.Chip
                               android:id="@+id/c3"
                               style="@style/Widget.MaterialComponents.Chip.Action"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginStart="4dp"
                               android:text="@string/genre_south_indian_blues"
                               app:chipIconTint="@color/purple_dark"
                               app:chipIcon="@mipmap/music_cd"
                               android:layout_marginLeft="4dp" />

                           <com.google.android.material.chip.Chip
                               android:id="@+id/c4"
                               style="@style/Widget.MaterialComponents.Chip.Action"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginStart="4dp"
                               android:text="@string/genre_background_score"
                               app:chipIconTint="@color/purple_dark"
                               app:chipIcon="@mipmap/music_cd"
                               android:layout_marginLeft="4dp" />

                           <com.google.android.material.chip.Chip
                               android:id="@+id/c5"
                               style="@style/Widget.MaterialComponents.Chip.Action"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginStart="4dp"
                               android:text="@string/genre_hip_hop"
                               app:chipIconTint="@color/purple_dark"
                               app:chipIcon="@mipmap/music_cd"
                               android:layout_marginLeft="4dp" />

                           <com.google.android.material.chip.Chip
                               android:id="@+id/c6"
                               style="@style/Widget.MaterialComponents.Chip.Action"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:layout_marginStart="4dp"
                               android:text="@string/genre_contemporary_r_b"
                               app:chipIconTint="@color/purple_dark"
                               app:chipIcon="@mipmap/music_cd"
                               android:layout_marginLeft="4dp" />

                           <com.google.android.material.chip.Chip
                               android:id="@+id/c7"
                               style="@style/Widget.MaterialComponents.Chip.Action"
                               android:layout_width="wrap_content"
                               android:layout_height="wrap_content"
                               android:text="@string/genre_blues"
                               app:chipIconTint="@color/purple_dark"
                               app:chipIcon="@mipmap/music_cd"
                               android:layout_marginStart="4dp"
                               android:layout_marginLeft="4dp"
                               />

                       </com.google.android.material.chip.ChipGroup>

                   </LinearLayout>

               </HorizontalScrollView>

               <!--New release-->
               <LinearLayout
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <TextView
                           android:layout_alignParentStart="true"
                           android:padding="15dp"
                           fontPath="fonts/GoogleSans_Bold.ttf"
                           android:text="@string/new_releases"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentLeft="true"
                           tools:ignore="MissingPrefix" />

                       <TextView
                           android:id="@+id/view_all"
                           android:layout_alignParentEnd="true"
                           android:padding="15dp"
                           android:visibility="gone"
                           android:text="@string/view_all"
                           android:textColor="@color/purple_dark"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentRight="true" />

                   </RelativeLayout>

                   <FrameLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <ProgressBar
                           android:id="@+id/pbar1"
                           android:indeterminate="true"
                           android:layout_gravity="center"
                           style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                           android:layout_width="180dp"
                           android:layout_height="wrap_content" />

                       <androidx.recyclerview.widget.RecyclerView
                           android:id="@+id/mNewReleasesRecyclerView"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"/>

                   </FrameLayout>

               </LinearLayout>

               <!--Artists-->
               <LinearLayout
                   android:visibility="gone"
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <TextView
                           android:layout_alignParentStart="true"
                           android:padding="15dp"
                           fontPath="fonts/GoogleSans_Bold.ttf"
                           android:text="Artists"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentLeft="true"
                           tools:ignore="MissingPrefix" />


                       <TextView
                           android:layout_alignParentEnd="true"
                           android:id="@+id/view_all_artists"
                           android:padding="15dp"
                           android:text="@string/view_all"
                           android:textColor="@color/purple_dark"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentRight="true" />

                   </RelativeLayout>

                   <FrameLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <ProgressBar
                           android:id="@+id/pbar2"
                           android:indeterminate="true"
                           android:layout_gravity="center"
                           style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                           android:layout_width="180dp"
                           android:layout_height="wrap_content" />


                       <androidx.recyclerview.widget.RecyclerView
                           android:id="@+id/mArtistsRecyclerView"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"/>

                   </FrameLayout>

               </LinearLayout>

               <!--Recents-->
               <LinearLayout
                   android:layout_marginBottom="10dp"
                   android:orientation="vertical"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <TextView
                           android:layout_alignParentStart="true"
                           android:padding="15dp"
                           fontPath="fonts/GoogleSans_Bold.ttf"
                           android:text="Recents"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentLeft="true"
                           tools:ignore="MissingPrefix" />

                      <FrameLayout
                          android:layout_alignParentRight="true"
                          android:layout_alignParentEnd="true"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content">

                          <TextView
                              android:id="@+id/clear_all_recents"
                              android:visibility="gone"
                              android:padding="15dp"
                              android:text="@string/clear_all"
                              android:textColor="@color/purple_dark"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                               />

                          <TextView
                              android:id="@+id/view_all_recents"
                              android:visibility="gone"
                              android:padding="15dp"
                              android:text="@string/view_all"
                              android:textColor="@color/purple_dark"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              />

                      </FrameLayout>

                   </RelativeLayout>

                   <FrameLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">

                       <RelativeLayout
                           android:visibility="gone"
                           android:id="@+id/default_layout"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content">

                           <ImageView
                               android:id="@+id/image"
                               android:src="@mipmap/music_note"
                               android:tint="#757575"
                               android:padding="15dp"
                               android:layout_width="100dp"
                               android:layout_height="100dp" />

                           <LinearLayout
                               android:gravity="center_vertical"
                               android:orientation="vertical"
                               android:layout_centerVertical="true"
                               android:layout_toEndOf="@id/image"
                               android:layout_marginStart="5dp"
                               android:layout_marginLeft="5dp"
                               android:layout_toRightOf="@id/image"
                               android:layout_marginEnd="5dp"
                               android:layout_marginRight="5dp"
                               android:layout_width="match_parent"
                               android:layout_height="match_parent">

                               <TextView
                                   fontPath="fonts/GoogleSans_Bold.ttf"
                                   android:textSize="19sp"
                                   android:textColor="#313131"
                                   android:text="@string/no_recents"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   tools:ignore="MissingPrefix" />

                               <TextView
                                   android:text="@string/no_recents_summary"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   />

                           </LinearLayout>

                       </RelativeLayout>

                       <androidx.recyclerview.widget.RecyclerView
                           android:id="@+id/mRecentsRecyclerView"
                           android:layout_width="match_parent"
                           android:layout_height="200dp"/>

                   </FrameLayout>

               </LinearLayout>


           </LinearLayout>

       </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>